--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -559,8 +559,7 @@ html.designer-page-body {
     flex-direction: row;
     justify-content: flex-end;
     width: 100%;
-    margin: 0.5em;
-    z-index: 1;
+    z-index: 2;
   }
   #mobile-container #mobile-nav a.nav-item {
     font-size: 0.8rem;
@@ -619,7 +618,7 @@ html.designer-page-body {
     text-align: center;
     align-items: center;
     justify-content: center;
-    z-index: 2000;
+    z-index: 1;
   }
   #mobile-container #mobile-title-container h1 {
     font-family: Redaction;
